<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragments.episode.details.EpisodeDetails">

    <TextView
        android:id="@+id/episode_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/episode_details" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/episode_details"
        android:text="@string/name" />

    <TextView
        android:id="@+id/air_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:text="@string/air_date" />

    <TextView
        android:id="@+id/episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/air_date"
        android:text="@string/episode" />

    <TextView
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/episode"
        android:text="@string/url" />

    <TextView
        android:id="@+id/created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/url"
        android:text="@string/created" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/character_item_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/created"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        app:layoutManager="GridLayoutManager"
        app:spanCount="2" />
</RelativeLayout>