<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp"
    tools:context=".fragments.character.list.search.CharactersSearchFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/filters_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <RadioGroup
            android:id="@+id/status_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/status_none"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/status_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <RadioButton
                android:id="@+id/status_alive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alive" />

            <RadioButton
                android:id="@+id/status_dead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dead" />

            <RadioButton
                android:id="@+id/status_unknown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/species_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/species"
                android:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@+id/gender_none"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/gender_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none" />

            <RadioButton
                android:id="@+id/gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/gender_genderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderless" />
        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:visibility="visible">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/submit">

            </Button>

            <Button
                android:id="@+id/reset_filters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"></Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>