<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragments.location.details.LocationDetails">

    <TextView
        android:id="@+id/location_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_details" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_details"
        android:text="@string/name" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:text="@string/type" />

    <TextView
        android:id="@+id/dimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type"
        android:text="@string/dimension" />

    <TextView
        android:id="@+id/created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dimension"
        android:text="@string/created" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/character_item_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/created"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        app:layoutManager="GridLayoutManager"
        app:spanCount="2" />
</RelativeLayout>